--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,20 @@
 
     <style name="PodLayout">
         <item name="android:padding">@dimen/default_layout_padding</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="PodTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:textColorHint">@color/secondaryColor</item>
+        <item name="android:textColorHint">@color/secondaryTextColor</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="PodChip">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="PodTextInputLayout.Wiki">
@@ -21,6 +31,8 @@
     <style name="PodTextView">
         <item name="android:paddingStart">@dimen/default_layout_padding</item>
         <item name="android:paddingEnd">@dimen/default_layout_padding</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="PodTextView.ItalicText">
@@ -36,6 +48,8 @@
 
     <style name="PodBottomAppBar" parent="Widget.MaterialComponents.BottomAppBar">
         <item name="android:layout_gravity">bottom</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="backgroundTint">@color/primaryColor</item>
     </style>
 
@@ -51,6 +65,8 @@
     <style name="PodFab" parent="Widget.Design.FloatingActionButton">
         <item name="layout_anchor">@id/bottom_app_bar</item>
         <item name="tint">@color/black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="PodFab.Plus">
