--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
     <color name="greyPrimaryColor">#37474f</color>
     <color name="greyPrimaryLightColor">#62727b</color>
     <color name="greyPrimaryDarkColor">#102027</color>
@@ -21,8 +20,8 @@
     <color name="greyPrimaryTextColor">#ffffff</color>
     <color name="greySecondaryTextColor">#000000</color>
 
-    <color name="solarizedPrimaryColor">#37474f</color>
-    <color name="solarizedPrimaryLightColor">#62727b</color>
+    <color name="solarizedPrimaryColor">#673AB7</color>
+    <color name="solarizedPrimaryLightColor">#7C5BB6</color>
     <color name="solarizedPrimaryDarkColor">#102027</color>
     <color name="solarizedSecondaryColor">#6a1b9a</color>
     <color name="solarizedSecondaryLightColor">#9c4dcc</color>
