--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,6 @@
     </style>
 
     <style name="PodTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:textColorHint">@color/secondaryTextColor</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -43,14 +42,13 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/title_text_size</item>
         <item name="android:layout_marginTop">@dimen/title_margin_top</item>
-        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="PodBottomAppBar" parent="Widget.MaterialComponents.BottomAppBar">
         <item name="android:layout_gravity">bottom</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="backgroundTint">@color/primaryColor</item>
+        <item name="backgroundTint">?attr/bottomBarBackgroundTint</item>
     </style>
 
     <style name="PodBottomAppBar.FabCenter" parent="PodBottomAppBar">
@@ -64,7 +62,6 @@
 
     <style name="PodFab" parent="Widget.Design.FloatingActionButton">
         <item name="layout_anchor">@id/bottom_app_bar</item>
-        <item name="tint">@color/black</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
