--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -7,13 +7,13 @@
             app:defaultValue="default"
             app:entries="@array/themes_entries"
             app:entryValues="@array/theme_values"
-            app:key="pref_theme_selector"
+            app:key="@string/pref_theme"
             app:title="@string/select_theme"
             app:useSimpleSummaryProvider="true" />
 
         <SwitchPreference
             android:defaultValue="false"
-            android:key="pref_switch_force_dark"
+            android:key="@string/pref_force_dark"
             android:title="@string/dark_mode" />
 
     </PreferenceCategory>
