--- a/app/src/main/res/layout/fragment_pod.xml
+++ b/app/src/main/res/layout/fragment_pod.xml
@@ -51,7 +51,7 @@
                     android:text="@string/today" />
             </LinearLayout>
 
-            <com.somethingsimple.nasapod.ui.EquilateralImageView
+            <com.somethingsimple.nasapod.ui.common.EquilateralImageView
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,14 +80,4 @@
 
     </androidx.core.widget.NestedScrollView>
 
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottom_app_bar"
-        style="@style/PodBottomAppBar.FabCenter"
-        app:menu="@menu/menu_pod_fragment" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        style="@style/PodFab.Plus"
-        android:contentDescription="@string/fab_description" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
