--- a/app/src/main/res/menu/menu_pod_fragment.xml
+++ b/app/src/main/res/menu/menu_pod_fragment.xml
@@ -6,9 +6,15 @@
         android:icon="@drawable/ic_baseline_favorite_24"
         android:title="@string/favourite"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/app_bar_explore"
+        android:icon="@drawable/ic_baseline_travel_explore_24"
+        android:title="@string/explore"
+        app:showAsAction="ifRoom" />
+
 
     <item
-        android:id="@+id/app_bar_search"
+        android:id="@+id/app_bar_settings"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
