--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="default_layout_padding">10dp</dimen>
     <dimen name="title_margin_top">5dp</dimen>
     <dimen name="title_text_size">20sp</dimen>
+    <dimen name="app_bar_dimension">300dp</dimen>
+    <dimen name="icons_in_actions_dim">32dp</dimen>
 </resources>
