--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="colorSecondaryVariant">@color/secondaryLightColor</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="bottomBarBackgroundTint">@color/primaryColor</item>
+        <item name="imageContentScrim">@color/primaryColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -25,6 +26,7 @@
         <item name="colorSecondaryVariant">@color/greySecondaryLightColor</item>
         <item name="colorOnSecondary">@color/greySecondaryDarkColor</item>
         <item name="bottomBarBackgroundTint">@color/greyPrimaryColor</item>
+        <item name="imageContentScrim">@color/greyPrimaryColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -40,6 +42,7 @@
         <item name="colorSecondaryVariant">@color/solarizedSecondaryColor</item>
         <item name="colorOnSecondary">@color/solarizedSecondaryDarkColor</item>
         <item name="bottomBarBackgroundTint">@color/solarizedPrimaryColor</item>
+        <item name="imageContentScrim">@color/solarizedPrimaryColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
