--- a/app/src/main/res/layout/favourite_fragment.xml
+++ b/app/src/main/res/layout/favourite_fragment.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/PodLayout.PaddingLeftRight"
     tools:context=".ui.favourite.FavouriteFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Favourites list will be here" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        style="@style/PodLayout"
+        tools:listitem="@layout/favourite_list_item" />
 
 </FrameLayout>
