--- a/app/src/main/res/xml/fragment_pod_xml_main_scene.xml
+++ b/app/src/main/res/xml/fragment_pod_xml_main_scene.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@+id/bottom_sheet_description_header" />
+            motion:layout_constraintTop_toBottomOf="@+id/description_header" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toBottomOf="@+id/bottom_sheet_description_header" />
+            motion:layout_constraintTop_toBottomOf="@+id/description_header" />
     </ConstraintSet>
 
 </MotionScene>
