--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,8 +57,15 @@
 
     <style name="PodTextView.Title">
         <item name="android:textStyle">bold</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
         <item name="android:textSize">@dimen/title_text_size</item>
         <item name="android:layout_marginTop">@dimen/title_margin_top</item>
+    </style>
+
+    <style name="PodTextView.Title.List">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="PodChipGroup" parent="Widget.MaterialComponents.ChipGroup">
