home_7 fonts and spannable title

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     </style>
 
     <style name="PodTextView.ItalicText">
-        <item name="android:textStyle">italic</item>
+        <item name="android:fontFamily">@font/artifika</item>
     </style>
 
     <style name="PodTextView.Title">
